### CHANGE log for package oligoClasses ###

Changes made by Matt Settles 12-4-2008

** All changes should generally have effect on only Affy Tiling, ST and expression arrays.
added classes AffyExonPDInfo and AffySTPDInfo

03-09-09 - Benilton Carvalho - committed version 1.5.6

** Small changes to reduce duplication of code for Gene and Exon Affymetrix arrays.

03-11-09 - Benilton Carvalho - committed version 1.5.7

** Added accessors for Affy Tiling arrays.

03-17-09 - Benilton Carvalho - committed version 1.5.11

** Generalized bg/bgindex methods for FeatureSet objects.

03-18-09 - Benilton Carvalho - committed version 1.5.12

** Fixed all warnings so it passes CHECK.

03-20-09 - R. Scharpf - committed version 1.5.14
** Removed requirement that chromosome be stored as a character string in oligoSnpSet featureData slot
** Removed calculateCopyNumber.Rd file